--- a/sttt.css
+++ b/sttt.css
@@ -118,3 +118,10 @@ height: 100vh
   	 flex-direction: column;
 
 }
+	
+	
+@media (max-width: 700px) {
+  .button {
+  	 flex-direction: column;
+
+}
