--- a/trt.css
+++ b/trt.css
@@ -112,7 +112,7 @@ border: 4px solid #FFFFDD;
 
 
 .Social_network_ne{
-    background-color: black;
+    background-color: #000000;
     border-radius:20px;
     padding: 8;
     padding-bottom: 0;
