--- a/trt.css
+++ b/trt.css
@@ -13,13 +13,13 @@ body{
     height: 100vh;
     font-size: 7vw;
     background-size: cover;
-    color: white;
+    color: #FFFFFF;
     color: #000000;
 }
 
 
 .menu_conteiner{
-  background-color: black;
+  background-color: #000000;
   padding: 6;
 
 }
@@ -51,7 +51,7 @@ border: 4px solid #FFFFDD;
     align-items: center;
     justify-content: center;
     background-size: cover;
-    color: white;
+    color: #FFFFFF;
     color: #000000;
     font-size: 2vw;
     padding-top: 10vw;
@@ -90,7 +90,7 @@ border: 4px solid #FFFFDD;
 .Contact_Information_da a {
     text-decoration: none;
     color: #FFFFDD;
-    background-color: black;
+    background-color: #000000;
     border-radius:20px;
     padding: 5;
 
